# CppHTK

./: README.md
cpp/: README.md
cpp/src/: CMakeLists.txt
cpp/src/arma_htk/: CMakeLists.txt
cpp/src/arma_htk/include/: gen_filt.h  htk_file.h  mfcc_htk.h  np_arma.h
cpp/src/arma_htk/src/: gen_filt.cpp  htk_file.cpp  mfcc_htk.cpp
cpp/src/libs/armadillo/: CMakeLists.txt  docs.html
cpp/src/sample/: CMakeLists.txt
cpp/src/sample/src/: main.cpp
cpp/src/sample/src/example/: file.htk
